--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "publish": "npm run build && npm publish",
     "dev": "parcel ./example/index.html",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && babel src -D --out-dir dist && shx cp .env.production ./dist/.env",
+    "build": "rimraf dist && webpack",
     "buildTest": "rimraf dist && babel src -D --out-dir dist && shx cp .env.test ./dist/.env"
   },
   "author": "wangancheng",
@@ -18,12 +18,17 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.4.4",
     "@babel/register": "^7.4.4",
-    "nodemon": "^2.0.3",
+    "@babel/runtime": "^7.20.1",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-loader": "^7.1.2",
     "parcel": "^2.7.0",
     "rimraf": "^2.6.3",
-    "shx": "^0.3.2"
+    "shx": "^0.3.2",
+    "webpack": "^3.10.0",
+    "webpack-node-externals": "^1.6.0"
   },
   "keywords": [
     "js-module",
