--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "dist/index.js",
   "scripts": {
     "publish": "npm run build && npm publish",
-    "patch": "npm version patch && npm run publish",
+    "patch": "npm version patch && npm run build && npm publish",
     "dev": "parcel ./example/index.html",
-    "test": "npm run build && mocha test",
+    "test": " mocha",
+    "testBuild": "npm run build && mocha",
+    "updaterf": "node ./update.rfmodule.js",
     "build": "rimraf dist && webpack",
     "buildTest": "rimraf dist && babel src -D --out-dir dist && shx cp .env.test ./dist/.env"
   },
