--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
   "name": "html-js-template",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "publish": "npm run build && npm publish",
     "patch": "npm version patch && npm run build && npm publish",
-    "dev": "npm run clearParcel && parcel ./example/index.html --port 9000",
+    "dev": "npm run clearParcel && parcel index.html --port 9000",
     "clearParcel": "rimraf dist && rimraf .parcel-cache",
+    "reinstall": "rimraf node_modules && pnpm install",
     "test": "mocha",
+    "lint": "eslint --fix --ext .js src",
     "testBuild": "npm run build && mocha",
     "urf": "node ./update.rfmodule.js",
-    "build": "rimraf dist && webpack",
+    "build": "webpack --mode=production --node-env=production",
     "buildTest": "rimraf dist && babel src -D --out-dir dist && shx cp .env.test ./dist/.env"
   },
   "author": "wangancheng",
   "homepage": "http://192.168.128.202:9001/rflight/common/frontend/easy-cli/html-js-template",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/register": "^7.4.4",
-    "@babel/runtime": "^7.20.1",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^7.1.2",
-    "mocha": "^10.1.0",
-    "parcel": "^2.7.0",
-    "rimraf": "^2.6.3",
-    "shx": "^0.3.2",
-    "webpack": "^3.10.0",
-    "webpack-node-externals": "^1.6.0"
+    "@babel/core": "7.21.4",
+    "@babel/plugin-transform-runtime": "7.21.4",
+    "@babel/preset-env": "7.21.4",
+    "@webpack-cli/generators": "3.0.2",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "9.1.2",
+    "eslint": "^8.39.0",
+    "html-webpack-plugin": "5.5.1",
+    "parcel": "2.8.3",
+    "parcel-bundler": "1.12.5",
+    "rimraf": "5.0.0",
+    "webpack": "5.80.0",
+    "webpack-cli": "5.0.2",
+    "webpack-dev-server": "4.13.3"
   },
   "keywords": [
     "js-module",
