--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,18 @@
-.DS_Store
-node_modules
 
-yarn.lock
-package-lock.json
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
-
-/.parcel-cache/
-dist
+.cache/
+coverage/
+dist/*
+!dist/index.html
+node_modules/
 *.log
-*-lock.*
 
-/output/*
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.parcel-cache
+dist
